--- a/src/assets/css/page.top.css
+++ b/src/assets/css/page.top.css
@@ -414,6 +414,10 @@ service
   border-top: 10px solid #64dc96;
   bottom: -7px;
 }
+.service__column--title .asterisk {
+  font-size: var(--fontSize16);
+
+}
 .service__column--img {
   align-items: center;
   display: flex;
@@ -524,6 +528,9 @@ secret
   line-height: 2;
   color: #fff;
   text-shadow: rgb(35, 24, 21) 2px 0px 0px, rgb(35, 24, 21) 1.75517px 0.958851px 0px, rgb(35, 24, 21) 1.0806px 1.68294px 0px, rgb(35, 24, 21) 0.141474px 1.99499px 0px, rgb(35, 24, 21) -0.832294px 1.81859px 0px, rgb(35, 24, 21) -1.60229px 1.19694px 0px, rgb(35, 24, 21) -1.97998px 0.28224px 0px, rgb(35, 24, 21) -1.87291px -0.701566px 0px, rgb(35, 24, 21) -1.30729px -1.5136px 0px, rgb(35, 24, 21) -0.421592px -1.95506px 0px, rgb(35, 24, 21) 0.567324px -1.91785px 0px, rgb(35, 24, 21) 1.41734px -1.41108px 0px, rgb(35, 24, 21) 1.92034px -0.558831px 0px;
+}
+.secret .page__subtitle h4 {
+  line-height: 1.5;
 }
 .secret .page__subtitle .large__text {
   font-size: var(--fontSize30);
@@ -755,6 +762,15 @@ mainvisual
   }
 }
 
+@media screen and (max-width:1240px) and (min-width: 768px) {
+  /* -------------------------
+  instagram
+  ----------------------------*/
+  .instagram__column {
+    padding: 0 20px;
+  }
+}
+
 @media screen and (max-width:1200px) {
 /* -------------------------
 news
@@ -889,6 +905,7 @@ message
     display: flex;
     margin: 0 auto;
     justify-content: center;
+    text-align: center;
   }
   .message__leftInner--img {
     margin: 40px auto 0;
