--- a/src/assets/css/page.characters.css
+++ b/src/assets/css/page.characters.css
@@ -66,7 +66,7 @@ member
     font-weight: bold;
 }
 .member__tag span {
-    vertical-align: middle;
+    vertical-align: sub;
 }
 .member__name {
     padding-top: 20px;
