--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1048,6 +1048,7 @@ lower common
   }
   .footer__telNumber {
     font-size: var(--fontSize26);
+    text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px, rgb(0, 0, 0) -0.416147px 0.909297px 0px, rgb(0, 0, 0) -0.989992px 0.14112px 0px, rgb(0, 0, 0) -0.653644px -0.756802px 0px, rgb(0, 0, 0) 0.283662px -0.958924px 0px, rgb(0, 0, 0) 0.96017px -0.279415px 0px;
   }
   .footer__reception {
     bottom: -5px;
@@ -1121,7 +1122,7 @@ lower common
   }
   .footer__telNumber {
     font-size: var(--fontSize25);
-    /* -webkit-text-stroke: .5px #000; */
+    text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px, rgb(0, 0, 0) -0.416147px 0.909297px 0px, rgb(0, 0, 0) -0.989992px 0.14112px 0px, rgb(0, 0, 0) -0.653644px -0.756802px 0px, rgb(0, 0, 0) 0.283662px -0.958924px 0px, rgb(0, 0, 0) 0.96017px -0.279415px 0px;
   }
   .footer__reception {
     font-size: var(--fontSize12);
