--- a/src/assets/css/page.service.css
+++ b/src/assets/css/page.service.css
@@ -341,6 +341,7 @@ introduction
     background-color: #fff;
     border-radius: 50px;
     text-align: center;
+    cursor: pointer;
 }
 .size__tags .tag.active {
     border: 3px solid var(--textBlack);
@@ -352,8 +353,24 @@ introduction
     margin: auto;
 }
 .introduction__size img {
+    width: 75%;
+    margin-left: 3.968vw;
+    position: absolute;
+}
+.introduction__size img:nth-child(2) {
+    right: -41.26vw;
+}
+.size__img {
     border: 3px solid var(--textBlack);
-    width: calc(100% - 6px);
+    background-image: url(../images/service/introduction_bg.svg);
+    background-size: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 31.74vw;
+    overflow: hidden;
+    position: relative;
 }
 .introduction__point {
     max-width: 1200px;
@@ -472,8 +489,9 @@ introduction
     background-color: #fff;
     border-radius: 50%;
     border: 3px solid var(--textBlack);
+    cursor: pointer;
 }
-.size__pagenation .pagenation.next {
+.size__pagenation .pagenation.active {
     background-color: var(--main-color);
 }
 .size__pagenation .pagenation.prev::before {
@@ -986,8 +1004,15 @@ introduction
         margin: auto;
     }
     .introduction__size img {
+        width: 75%;
+    }
+    .introduction__size img:nth-child(2) {
+        right: -71.79vw;
+    }
+    .size__img {
+        height: 61.53vw;
+        min-height: 240px;
         border: 2px solid var(--textBlack);
-        width: calc(100% - 4px);
     }
     .introduction__point {
         max-width: none;
@@ -1104,7 +1129,7 @@ introduction
         border-radius: 50%;
         border: 2px solid var(--textBlack);
     }
-    .size__pagenation .pagenation.next {
+    .size__pagenation .pagenation.active {
         background-color: var(--main-color);
     }
     .size__pagenation .pagenation.prev::before {
