--- a/src/assets/css/page.about.css
+++ b/src/assets/css/page.about.css
@@ -669,6 +669,9 @@ message
     .message__content--name span:nth-child(2) {
         margin-right: 10px;
     }
+    .message__content--name .small {
+        font-size: 14px;
+    }
     /* -------------------------
     history
     ----------------------------*/
@@ -730,7 +733,7 @@ message
         text-shadow: rgb(35, 24, 21) 2px 0px 0px, rgb(35, 24, 21) 1.75517px 0.958851px 0px, rgb(35, 24, 21) 1.0806px 1.68294px 0px, rgb(35, 24, 21) 0.141474px 1.99499px 0px, rgb(35, 24, 21) -0.832294px 1.81859px 0px, rgb(35, 24, 21) -1.60229px 1.19694px 0px, rgb(35, 24, 21) -1.97998px 0.28224px 0px, rgb(35, 24, 21) -1.87291px -0.701566px 0px, rgb(35, 24, 21) -1.30729px -1.5136px 0px, rgb(35, 24, 21) -0.421592px -1.95506px 0px, rgb(35, 24, 21) 0.567324px -1.91785px 0px, rgb(35, 24, 21) 1.41734px -1.41108px 0px, rgb(35, 24, 21) 1.92034px -0.558831px 0px;
         }
     .history__item--year .small {
-        font-size: var(--fontSize25);
+        font-size: var(--fontSize18);
         padding-left: 2px;
     }
     .histroy__item--text {
