--- a/src/assets/css/variable.css
+++ b/src/assets/css/variable.css
@@ -21,7 +21,8 @@
   --fontSize35: clamp(2rem, 1.932rem + .34vw, 2.188rem);
   --fontSize36: clamp(1.5rem, 1.177rem + 1.38vw, 2.25rem);
   --fontSize40: clamp(2.25rem, 2.159rem + .45vw, 2.5rem);
-  --fontSize44: clamp(2.25rem, 2.068rem + .91vw, 2.75rem);
+  /* --fontSize44: clamp(2.25rem, 2.068rem + .91vw, 2.75rem); */
+  --fontSize44: clamp(1.875rem, 1.571rem + 1.25vw, 2.75rem);
   --fontSize47: clamp(2.75rem, 2.682rem + .34vw, 2.938rem);
   --fontSize54: clamp(1.875rem, 1.354rem + 2.14vw, 3.375rem);
   --fontSize70: clamp(3.75rem, 3.523rem + 1.14vw, 4.375rem);
