--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -174,6 +174,9 @@ header
   width: 115px;
   position: relative;
 }
+.headerNavMenu img {
+  cursor: pointer;
+}
 .headerNavMenu:hover .defalt__img {
   display: none;
 
@@ -245,7 +248,7 @@ nav menu
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
   z-index: 1000;
   font-family: var(--fontZenMaruGothic);
